--- a/app/assets/stylesheets/shared/header/search.scss
+++ b/app/assets/stylesheets/shared/header/search.scss
@@ -51,7 +51,7 @@
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 250px) {
   .search {
     display: none;
   }
